--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
           name: dist-files
           path: ./dist
       - name: Output contents
+        id: deploy
         run: ls
       - name: Deploy site
         uses: ./.github/actions/deploy-s3-javascript
@@ -71,3 +72,6 @@ jobs:
           bucket: gha-custom-action-hosting
           dist-folder: ./dist
           # bucket-region: us-east-2
+      - name: Output information
+        run: |
+          echo "Live URL: ${{ steps.deploy.outputs.website-url }}"
